--- a/src/app/pages/info-service/info-service.component.css
+++ b/src/app/pages/info-service/info-service.component.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins");
 
+
+body{
+    background: #e2e2e2;
+}
+
 h1,h2,span, p,h3, h4
 {
     font-family: Poppins;
