--- a/src/app/components/google-maps/google-maps.component.html
+++ b/src/app/components/google-maps/google-maps.component.html
@@ -4,7 +4,7 @@
     <button (click)="addMarker()">Agregar Marcador</button>
 </div>
 
-<google-map #map height="450px" width="1000px" [center]="center" [zoom]="zoom" [options]="mapOptions"
+<google-map #map height="450px" width="100%" [center]="center" [zoom]="zoom" [options]="mapOptions"
     (mapMousemove)="onMapMouseMove($event)">
     <!-- Mostrar marcadores -->
     <map-marker *ngFor="let marker of markers" [position]="marker.position"
