--- a/src/app/pages/payment/payment.component.html
+++ b/src/app/pages/payment/payment.component.html
@@ -1,10 +1,5 @@
 <body>
-    <button class="cursor-pointer duration-200 hover:scale-125 active:scale-100" title="Go Back" (click)="goToDashboard()">
-        <svg xmlns="http://www.w3.org/2000/svg" width="50px" height="50px" top="-3rem" viewBox="0 0 24 24" class="stroke-black">
-            <path stroke-linejoin="round" stroke-linecap="round" stroke-width="1.5" d="M11 6L5 12M5 12L11 18M5 12H19">
-            </path>
-        </svg>
-    </button>
+    <app-go-to-dashboard></app-go-to-dashboard>
     <div class="contenedor">
         <!-- Tarjeta Delantera -->
         <section class="tarjeta" id="tarjeta" #card (click)=" rotate(card) ">
