--- a/src/app/pages/info-service/info-service.component.css
+++ b/src/app/pages/info-service/info-service.component.css
@@ -3,6 +3,7 @@
 
 body{
     background: #e2e2e2;
+    padding: 2rem;
 }
 
 h1,h2,span, p,h3, h4
@@ -22,8 +23,14 @@ h4
     font-weight: bold;
 }
 
-h2, h1{
+h2, h1, .opciones{
     font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.tittle
+{
+    font-size: 2.5rem;
     font-weight: bold;
 }
 
@@ -31,7 +38,8 @@ h2, h1{
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 4rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
     width: 100%;
 
 }
@@ -49,6 +57,8 @@ h2, h1{
     display: flex;
     gap: 0.5rem;
     margin-right: 20px;
+    justify-content: center;
+    align-items: center;
 }
 
 .imagescontainer {
@@ -65,70 +75,24 @@ h2, h1{
     /* Ajustar según las necesidades */
     width: 100%;
     object-fit: cover;
+    border-radius: 2rem
 }
 
 .imagescontainer .leftimage {
-    flex: 1;
+    flex: 0.42;
+    
 }
+
 
 .imagescontainer .rightimage {
-    flex: 1;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: 1rem;
-}
-
-.imagescontainer .rightimage>.eachimg {
-    height: 100%;
-    position: relative;
-}
-
-.imagescontainer .rightimage>.eachimg:nth-child(1) {
-    grid-column: 1/span 1;
-    grid-row: 1/span 1;
-}
-
-.imagescontainer .rightimage>.eachimg:nth-child(2) {
-    grid-column: 2/span 1;
-    grid-row: 1/span 1;
-}
-
-.imagescontainer .rightimage>.eachimg:nth-child(3) {
-    grid-column: 1/span 1;
-    grid-row: 2/span 1;
-}
-
-.imagescontainer .rightimage>.eachimg:nth-child(4) {
-    grid-column: 2/span 1;
-    grid-row: 2/span 1;
-}
-
-.imagescontainer .rightimage>.eachimg>img {
-    height: auto;
-    max-height: 240px;
-    /* Ajustar para que coincida con la altura deseada */
+    flex: 0.58;
     width: 100%;
-    object-fit: cover;
+    border-radius: 2rem;
+    
+    
 }
 
-.imagescontainer .rightimage>.eachimg>.showmore {
-    display: flex;
-    bottom: 1rem;
-    gap: 1rem;
-    border: none;
-    cursor: pointer;
-    height: 20%;
-    width: 40%;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    padding: 0.25rem;
-    right: 1rem;
-    background-color: white;
-    color: black;
-    position: absolute;
-}
+
 
 .details {
     display: flex;
@@ -138,6 +102,7 @@ h2, h1{
 
 .details>.placedetails {
     flex: 2.5;
+    
 }
 
 
@@ -202,27 +167,32 @@ h2, h1{
     flex: 1;
     height: 100%;
     padding: 2rem 2rem 2rem 2rem;
-    border: 1px solid gray;
+    
     border-radius: 10px;
+    background: #e2e2e2;
+    border-radius: 10px;
+    box-shadow: -3px -3px 7px #ffffff73,
+        2px 2px 5px rgba(94, 104, 121, 0.288);
 }
 
 .rentalapplication>.details>.summary>.itemsdetails {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    border: 1px solid gray;
+    
+    background: #acabab;
     border-radius: 10px;
-    border-color: gray;
-    border-bottom: red;
+    box-shadow: -3px -3px 7px #ffffff73,
+        2px 2px 5px rgba(94, 104, 121, 0.288);
     gap: 1px;
     margin: 2rem 0 2rem 0;
 }
 
 .rentalapplication>.details>.summary>.itemsdetails>.eachitem {
     padding: 1rem;
-    background: white;
-    /* Fondo blanco para cada celda */
+    
+    background-color: #e2e2e2;
     text-align: center;
-    /* Centrar el texto */
+    
 }
 
 .rentalapplication>.details>.summary>.itemsdetails>.eachitem>h5 {
@@ -232,13 +202,13 @@ h2, h1{
 .rentalapplication>.details>.summary>.itemsdetails>.eachitem:nth-child(3) {
     grid-column: 1 / -1;
     /* Ocupar ambas columnas */
-    border-top: 1px solid gray;
+    
     /* Borde superior para separar de las fechas */
 }
 
 .rentalapplication>.details>.summary>.itemsdetails>.eachitem:nth-child(2) {
 
-    border-left: 1px solid gray;
+    
     border-top-right-radius: 10px;
     /* Borde superior para separar de las fechas */
 }
@@ -254,46 +224,47 @@ h2, h1{
 .rentalapplication>.details>.summary>.itemsdetails>.eachitem:last-child {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    border-bottom: 1px solid gray;
+    
 }
 
 .rentalapplication>.details>.summary>.reserve {
-    width: 100%;
-    background-color: #c8bdab;
-    font-size: 1.2rem;
-    height: auto;
-    padding: 1rem 2rem;
-    color: white;
-    border: none;
-    border-radius: 10px;
-    transition: all 0.4s ease-in-out;
-    cursor: pointer;
-
+    margin-top: 1rem;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    
 }
 
-.rentalapplication>.details>.summary>.reserve:hover {
-    background-color: #a09b9a;
-    color: white;
-}
+
 
 .rentalapplication .dates {
     display: flex;
-    gap: 1rem;
+    gap: 1.5rem;
+    align-items: center;
+    justify-content: center;
+}
+.contenidoSecciones{
+    
+    
+    padding: 3rem;
+    
 }
 
 .rentalapplication .dates .wrapper-calendar {
-    margin: 1rem;
-    padding: .5rem;
-    border: solid 1px #eaeaea;
+    padding: 1.8rem;
     box-shadow: 0 0 10px #e4e4e4;
     text-align: center;
-    
+    background: #e2e2e2;
+    border-radius: 10px;
+    box-shadow: -3px -3px 7px #ffffff73,
+        2px 2px 5px rgba(94, 104, 121, 0.288);
 }
 
 .day-name {
     background: #eee;
     font-weight: bold;
     font-size: 12px;
+    
     margin-bottom: 2px;
     padding: 4px;
     text-align: center;
@@ -322,7 +293,10 @@ h2, h1{
 }
 
 .selected-day {
-    background-color: #c8bdab;
+    background: #d8d8d8;
+    
+    box-shadow: -3px -3px 7px #ffffff73,
+        2px 2px 5px rgba(94, 104, 121, 0.288);
     border-radius: 100%;
     /* Cambia al color que prefieras */
 }
