--- a/src/app/pages/info-service/info-service.component.html
+++ b/src/app/pages/info-service/info-service.component.html
@@ -1,14 +1,14 @@
 <body>
-    
+    <app-go-to-dashboard></app-go-to-dashboard>
     <div class="rentalapplication">
         <div class="topcontainer">
-            <h2 class="tittle">FINCA DEL OSO EN LAS MONTAÑAS</h2>
+            <div class="tittle">FINCA DEL OSO EN LAS MONTAÑAS</div>
             <div class="optioncontainer">
-                <span class="material-symbols-outlined"> share </span>
+                <i class="fa-solid fa-share-nodes"></i>
                 <h3>Compartir</h3>
             </div>
             <div class="optioncontainer">
-                <span class="material-symbols-outlined"> favorite </span>
+                <i class="fa-solid fa-bookmark"></i>
                 <h3>Guardar</h3>
             </div>
         </div>
@@ -17,22 +17,8 @@
                 <img src="assets/living1.png" alt="placeholder" class="imgplace" />
             </div>
             <div class="rightimage">
-                <div class="eachimg">
-                    <img src="assets/living1.png" alt="placeholder" class="imgplace" />
-                </div>
-                <div class="eachimg">
-                    <img src="assets/living1.png" alt="placeholder" class="imgplace" />
-                </div>
-                <div class="eachimg">
-                    <img src="assets/living1.png" alt="placeholder" class="imgplace" />
-                </div>
-                <div class="eachimg">
-                    <img src="assets/living1.png" alt="placeholder" class="img" />
-                    <button class="showmore">
-                        <span><i class="fa-solid fa-plus"></i></span>
-                        <h3>Ver más</h3>
-                    </button>
-                </div>
+                <!-- <app-weather></app-weather> -->
+                <app-google-maps></app-google-maps>
             </div>
         </div>
         <div class="details">
@@ -73,59 +59,62 @@
                         <i class="fa-solid fa-chevron-right"></i>
                     </div>
                 </div>
-                <div class="dates">
-                    <div class="wrapper-calendar">
-                        <h2>Fecha Entrada</h2>
-                        <div class="header-calendar">
-                            <div>
-                                <button (click)="changeMonth(-1)" class="btn-prev">
-                                    <i class="fa-solid fa-chevron-left"></i>
-                                </button>
+                <div class="contenidoSecciones">
+                    <div class="dates">
+                        <div class="wrapper-calendar">
+                            <h2>Fecha Entrada</h2>
+                            <div class="header-calendar">
+                                <div>
+                                    <button (click)="changeMonth(-1)" class="btn-prev">
+                                        <i class="fa-solid fa-chevron-left"></i>
+                                    </button>
+                                </div>
+                                <h1>{{ dateSelect | date : "MMMM, yyyy" }}</h1>
+                                <div>
+                                    <button (click)="changeMonth(1)" class="btn-next">
+                                        <i class="fa-solid fa-chevron-right"></i>
+                                    </button>
+                                </div>
                             </div>
-                            <h1>{{ dateSelect | date : "MMMM, yyyy" }}</h1>
-                            <div>
-                                <button (click)="changeMonth(1)" class="btn-next">
-                                    <i class="fa-solid fa-chevron-right"></i>
-                                </button>
-                            </div>
+                            <ol>
+                                <li *ngFor="let day of week" class="day-name">
+                                    {{ day | slice : 0 : 3 }}
+                                </li>
+                                <li (click)="clickDay(day)" [style.gridColumnStart]="first ? day?.indexWeek : 'auto'"
+                                    [ngClass]="{ 'selected-day': selectedDay === day }"
+                                    *ngFor="let day of monthSelect; let first = first">
+                                    <span>{{ day?.value }}</span>
+                                </li>
+                            </ol>
                         </div>
-                        <ol>
-                            <li *ngFor="let day of week" class="day-name">
-                                {{ day | slice : 0 : 3 }}
-                            </li>
-                            <li (click)="clickDay(day)" [style.gridColumnStart]="first ? day?.indexWeek : 'auto'"
-                                [ngClass]="{ 'selected-day': selectedDay === day }"
-                                *ngFor="let day of monthSelect; let first = first">
-                                <span>{{ day?.value }}</span>
-                            </li>
-                        </ol>
-                    </div>
-                    <div class="wrapper-calendar">
-                        <h2>Fecha Salida</h2>
-                        <div class="header-calendar">
-                            <div>
-                                <button (click)="changeMonthExit(-1)" class="btn-prev">
-                                    <i class="fa-solid fa-chevron-left"></i>
-                                </button>
+                        <div class="wrapper-calendar">
+                            <h2>Fecha Salida</h2>
+                            <div class="header-calendar">
+                                <div>
+                                    <button (click)="changeMonthExit(-1)" class="btn-prev">
+                                        <i class="fa-solid fa-chevron-left"></i>
+                                    </button>
+                                </div>
+                                <h1>{{ dateSelectExit | date : "MMMM, yyyy" }}</h1>
+                                <div>
+                                    <button (click)="changeMonthExit(1)" class="btn-next">
+                                        <i class="fa-solid fa-chevron-right"></i>
+                                    </button>
+                                </div>
                             </div>
-                            <h1>{{ dateSelectExit | date : "MMMM, yyyy" }}</h1>
-                            <div>
-                                <button (click)="changeMonthExit(1)" class="btn-next">
-                                    <i class="fa-solid fa-chevron-right"></i>
-                                </button>
-                            </div>
+                            <ol>
+                                <li *ngFor="let day of week" class="day-name">
+                                    {{ day | slice : 0 : 3 }}
+                                </li>
+                                <li (click)="clickDayExit(day)" [style.gridColumnStart]="first ? day?.indexWeek : 'auto'"
+                                    [ngClass]="{ 'selected-day': selectedDayExit === day }"
+                                    *ngFor="let day of monthSelectExit; let first = first">
+                                    <span>{{ day?.value }}</span>
+                                </li>
+                            </ol>
                         </div>
-                        <ol>
-                            <li *ngFor="let day of week" class="day-name">
-                                {{ day | slice : 0 : 3 }}
-                            </li>
-                            <li (click)="clickDayExit(day)" [style.gridColumnStart]="first ? day?.indexWeek : 'auto'"
-                                [ngClass]="{ 'selected-day': selectedDayExit === day }"
-                                *ngFor="let day of monthSelectExit; let first = first">
-                                <span>{{ day?.value }}</span>
-                            </li>
-                        </ol>
                     </div>
+                    <app-weather></app-weather>
                 </div>
             </div>
             <div class="summary">
@@ -146,7 +135,10 @@
                     </div>
                 </div>
                 <h1>Total: $4.900.000</h1>
-                <button class="reserve">Pagar</button>
+                <div class="reserve">   
+                    <app-add-to-cart></app-add-to-cart>
+                </div>
+                
             </div>
         </div>
     </div>
