--- a/src/app/components/google-maps/google-maps.component.html
+++ b/src/app/components/google-maps/google-maps.component.html
@@ -1,16 +1,12 @@
 <div>
-    <input type="number" placeholder="Latitud" [(ngModel)]="markerLat" />
-    <input type="number" placeholder="Longitud" [(ngModel)]="markerLng" />
-    <button (click)="addMarker()">Agregar Marcador</button>
+    <input type="number" placeholder="Latitude" #latInput />
+    <input type="number" placeholder="Longitude" #lngInput />
+    <button (click)="addMarker(latInput.valueAsNumber, lngInput.valueAsNumber)">
+        Add Marker
+    </button>
 </div>
+<div class="rounded-3xl shadow-lg overflow-hidden h-full w-full">
+    <google-map height="100%" width="100%" [center]="center" [zoom]="zoom" [options]="mapOptions">
+    </google-map>
 
-<google-map #map height="450px" width="100%" [center]="center" [zoom]="zoom" [options]="mapOptions"
-    (mapMousemove)="onMapMouseMove($event)">
-    <!-- Mostrar marcadores -->
-    <map-marker *ngFor="let marker of markers" [position]="marker.position"
-        [options]="marker.options ? marker.options : {}"></map-marker>
-
-</google-map>
-
-<div>Latitude: {{ display?.lat }}</div>
-<div>Longitude: {{ display?.lng }}</div>
+</div>
